--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{cron: "30 5,17 * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -22,7 +22,7 @@ jobs:
           #  - read:user     (for user related data)
           #  - read:packages (for some packages related data)
           #  - repo          (optional, if you want to include private repositories)
-          token: ${{ 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 }}
+          token: ${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}
 
           # Options
           user: AiharaMahiru
@@ -60,16 +60,5 @@ jobs:
           plugin_pagespeed_pwa: yes
           plugin_pagespeed_screenshot: yes
           plugin_pagespeed_url: www.miaouu.top
-          plugin_skyline: yes
-          plugin_skyline_frames: 60
-          plugin_skyline_quality: 0.5
-          plugin_skyline_settings: {
-  "url": "https://skyline.github.com/${login}/${year}",
-  "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
-  "wait": 1,
-  "hide": "button, footer, a"
-}
-
-          plugin_skyline_year: 2023
           plugin_stars: yes
           plugin_stars_limit: 4
