--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           #  - read:user     (for user related data)
           #  - read:packages (for some packages related data)
           #  - repo          (optional, if you want to include private repositories)
-          token: ${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}
+          token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: AiharaMahiru
